5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1582_1333.log
== TEST (2019-03-18 21:28:18) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 21:28:20) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- EXECUTION TIME:
0.128173
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:28:21) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 21:28:22) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- EXECUTION TIME:
0.126061
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:33:29) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(30 + 9 + 8// 9 * 10)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 21:33:30) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(30 + 9 + 8// 9 * 10)
-- EXECUTION TIME:
0.124664
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 21:34:02) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 21:34:03) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.139293
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 15:54:24) 
-- CODE:
expressao = 30–3 **2+8//3**2*10
print(expressão)
-- ERROR:
File "XXXX", line 1
    expressao = 30–3 **2+8//3**2*10
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 15:54:25) 
-- CODE:
expressao = 30–3 **2+8//3**2*10
print(expressão)
-- EXECUTION TIME:
0.131753
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 30\u20133 **2+8//3**2*10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 15:54:41) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(expressão)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(expressão)
NameError: name 'expressão' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 15:54:43) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(expressão)
-- EXECUTION TIME:
0.138227
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1333/main.py", line 2, in <module>
    print(express\xe3o)
NameError: name 'express\xe3o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 15:55:00) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(expressão)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(expressão)
NameError: name 'expressão' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 15:55:03) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(expressão)
-- EXECUTION TIME:
0.282739
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1333/main.py", line 2, in <module>
    print(express\xe3o)
NameError: name 'express\xe3o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 15:55:46) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(expressão)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(expressão)
NameError: name 'expressão' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 15:56:08) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(expressão)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(expressão)
NameError: name 'expressão' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 15:56:16) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(expressão)
-- EXECUTION TIME:
0.132214
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1333/main.py", line 2, in <module>
    print(express\xe3o)
NameError: name 'express\xe3o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 15:56:33) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 15:56:34) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(expressao)
-- EXECUTION TIME:
0.155163
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
